K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - name: node-server
        image: benn1440/nodeserver:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
