K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server
spec:
  selector:
    app: node-server
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
